correction of wording, etc

--- a/book/wezterm/font.html
+++ b/book/wezterm/font.html
@@ -85,7 +85,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="../introduction.html"><strong aria-hidden="true">1.</strong> introduction</a></li><li class="chapter-item expanded affix "><li class="part-title">WezTerm</li><li class="chapter-item expanded "><a href="../wezterm/installation.html"><strong aria-hidden="true">2.</strong> installation</a></li><li class="chapter-item expanded "><a href="../wezterm/base.html"><strong aria-hidden="true">3.</strong> Base Settings</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../wezterm/window.html"><strong aria-hidden="true">3.1.</strong> Window</a></li><li class="chapter-item expanded "><a href="../wezterm/shell.html"><strong aria-hidden="true">3.2.</strong> Shell Prompt</a></li><li class="chapter-item expanded "><a href="../wezterm/font.html" class="active"><strong aria-hidden="true">3.3.</strong> Font</a></li><li class="chapter-item expanded "><a href="../wezterm/frame.html"><strong aria-hidden="true">3.4.</strong> Frame</a></li><li class="chapter-item expanded "><a href="../wezterm/keybind.html"><strong aria-hidden="true">3.5.</strong> Keybind</a></li><li class="chapter-item expanded "><a href="../wezterm/leader.html"><strong aria-hidden="true">3.6.</strong> Leader Key</a></li></ol></li><li class="chapter-item expanded "><a href="../wezterm/format.html"><strong aria-hidden="true">4.</strong> Format</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../wezterm/window-title.html"><strong aria-hidden="true">4.1.</strong> Window Title</a></li><li class="chapter-item expanded "><a href="../wezterm/tab.html"><strong aria-hidden="true">4.2.</strong> Tab</a></li></ol></li><li class="chapter-item expanded "><a href="../wezterm/status.html"><strong aria-hidden="true">5.</strong> Status Bar</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../wezterm/left-status.html"><strong aria-hidden="true">5.1.</strong> Left Status</a></li><li class="chapter-item expanded "><a href="../wezterm/right-status.html"><strong aria-hidden="true">5.2.</strong> Right Status</a></li></ol></li><li class="chapter-item expanded "><a href="../wezterm/custom.html"><strong aria-hidden="true">6.</strong> Custom Event</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../wezterm/toggle-font.html"><strong aria-hidden="true">6.1.</strong> Toggle Font</a></li></ol></li><li class="chapter-item expanded "><li class="part-title">neoVim</li><li class="chapter-item expanded affix "><li class="part-title">...To Be Continued</li></ol>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="../introduction.html"><strong aria-hidden="true">1.</strong> introduction</a></li><li class="chapter-item expanded affix "><li class="part-title">WezTerm</li><li class="chapter-item expanded "><a href="../wezterm/installation.html"><strong aria-hidden="true">2.</strong> installation</a></li><li class="chapter-item expanded "><a href="../wezterm/base.html"><strong aria-hidden="true">3.</strong> Base Settings</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../wezterm/window.html"><strong aria-hidden="true">3.1.</strong> Window</a></li><li class="chapter-item expanded "><a href="../wezterm/shell.html"><strong aria-hidden="true">3.2.</strong> Shell Prompt</a></li><li class="chapter-item expanded "><a href="../wezterm/font.html" class="active"><strong aria-hidden="true">3.3.</strong> Font</a></li><li class="chapter-item expanded "><a href="../wezterm/frame.html"><strong aria-hidden="true">3.4.</strong> Window Frame</a></li><li class="chapter-item expanded "><a href="../wezterm/keybind.html"><strong aria-hidden="true">3.5.</strong> Key Binding</a></li><li class="chapter-item expanded "><a href="../wezterm/leader.html"><strong aria-hidden="true">3.6.</strong> Leader Key</a></li></ol></li><li class="chapter-item expanded "><a href="../wezterm/format.html"><strong aria-hidden="true">4.</strong> Format</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../wezterm/window-title.html"><strong aria-hidden="true">4.1.</strong> Window Title</a></li><li class="chapter-item expanded "><a href="../wezterm/tab.html"><strong aria-hidden="true">4.2.</strong> Tab</a></li></ol></li><li class="chapter-item expanded "><a href="../wezterm/status.html"><strong aria-hidden="true">5.</strong> Status Bar</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../wezterm/left-status.html"><strong aria-hidden="true">5.1.</strong> Left Status</a></li><li class="chapter-item expanded "><a href="../wezterm/right-status.html"><strong aria-hidden="true">5.2.</strong> Right Status</a></li></ol></li><li class="chapter-item expanded "><a href="../wezterm/custom.html"><strong aria-hidden="true">6.</strong> Custom Event</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../wezterm/toggle-font.html"><strong aria-hidden="true">6.1.</strong> Toggle Font</a></li></ol></li><li class="chapter-item expanded "><li class="part-title">neoVim</li><li class="chapter-item expanded affix "><li class="part-title">...To Be Continued</li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -166,7 +166,7 @@
 <div>
 <p>わたしが深く理解しているわけではないので上手く説明できませんが、</p>
 <p>要は基本的な文字「あ」とか「意」とか 「abc」 とか「!@#」などに加えて特殊な記号フォントを加えたものです。</p>
-<p>月、出てましたよね。あれです。</p>
+<p>月、出てましたよね。あれです😆</p>
 </div>
 </div>
 <h2 id="ダウンロード"><a class="header" href="#ダウンロード">ダウンロード</a></h2>
@@ -182,18 +182,18 @@
 </div>
 <p>「ダウンロードはこちら」というリンクから、お言葉に甘えて<code>FirgeNerd_v0.2.0.zip</code>をダウンロードしましょう。感謝😀</p>
 <h2 id="インストール"><a class="header" href="#インストール">インストール</a></h2>
-<p>フォントのインストールは OS の作業になるので、御多分に洩れず<code>macOS</code>のやり方だけ載せます。</p>
+<p>フォントのインストールは OS の作業になるので、<code>macOS</code>のやり方だけ軽く載せます。</p>
 <p>...基本的にはどのOSでも、ダウンロードしてきたファイルを開けば「インストールしますか？」的なの出てきますよね。多分。</p>
 <p>やればできる!!</p>
 <p><img src="img/font1.png" alt="font1.png" />
 <img src="img/font2.png" alt="font2.png" />
 <img src="img/font3.png" alt="font3.png" /></p>
-<p>ほらできた!!</p>
+<p>ほらできた🤗</p>
 <h2 id="wezterm-設定"><a class="header" href="#wezterm-設定">WezTerm 設定</a></h2>
-<p>これをWezTerm に設定すれば良さそう。</p>
-<div id="admonition-weztermfonthttpswezfurlongorgweztermconfigluaweztermfonthtml" class="admonition example">
+<p>で、このフォントを<code>WezTerm</code>に設定すれば良さそう。</p>
+<div id="admonition-weztermfonthttpswezfurlongorgweztermconfigluaweztermfonthtml" class="admonition note">
 <div class="admonition-title">
-<p>(wezterm.font)[https://wezfurlong.org/wezterm/config/lua/wezterm/font.html]</p>
+<p><a href="https://wezfurlong.org/wezterm/config/lua/wezterm/font.html">wezterm.font</a></p>
 <p><a class="admonition-anchor-link" href="#admonition-weztermfonthttpswezfurlongorgweztermconfigluaweztermfonthtml"></a></p>
 </div>
 <div>
@@ -219,11 +219,23 @@ font = require(&quot;wezterm&quot;).font(&quot;Firge35Nerd Console&quot;),
 <p><a class="admonition-anchor-link" href="#admonition-info-1"></a></p>
 </div>
 <div>
-<p>ファミリー名は Font Book 等で確認できます。「情報を確認する(command + i)」ですね。
+<p>ファミリー名は Font Book 等で確認できます。「情報を確認する(<code>command + i</code>)」ですね。
 <img src="img/font-info.png" alt="font-info.png" /></p>
 </div>
 </div>
 <p>フォントサイズも指定できるので一緒に入れておきましょう。</p>
+<div id="admonition-httpswezfurlongorgweztermconfigluaconfigfont_sizehtml" class="admonition note">
+<div class="admonition-title">
+<p>https://wezfurlong.org/wezterm/config/lua/config/font_size.html</p>
+<p><a class="admonition-anchor-link" href="#admonition-httpswezfurlongorgweztermconfigluaconfigfont_sizehtml"></a></p>
+</div>
+<div>
+<p>Specifies the size of the font, measured in points.</p>
+<p>You may use fractional point sizes, such as 13.3, to fine tune the size.</p>
+<p>フォントのサイズをポイント数で指定します。</p>
+<p>13.3 のような小数点のサイズを使用して、サイズを微調整することができます。</p>
+</div>
+</div>
 <div id="admonition-weztermlua-1" class="admonition example">
 <div class="admonition-title">
 <p>wezterm.lua</p>
@@ -234,18 +246,19 @@ font = require(&quot;wezterm&quot;).font(&quot;Firge35Nerd Console&quot;),
 </code></pre>
 </div>
 </div>
-<p>Roboto:</p>
-<p><img src="img/font-roboto.png" alt="font-roboto.png" /></p>
-<p>Firge35Nerd Console:</p>
-<p><img src="img/font-firge.png" alt="font-firge.png" /></p>
+<p>上の例はデフォルト値そのままですが、お好みで調整してください。</p>
 <div id="admonition-success" class="admonition success">
 <div class="admonition-title">
 <p>Success</p>
 <p><a class="admonition-anchor-link" href="#admonition-success"></a></p>
 </div>
 <div>
-<p>どうでしょう？明らかに日本語が綺麗になりましたね。</p>
-<p>やったね❗️</p>
+<p>どうでしょう？明らかに日本語が綺麗になりましたね❗️</p>
+<p>Roboto:</p>
+<p><img src="img/font-roboto.png" alt="font-roboto.png" /></p>
+<p>Firge35Nerd Console:</p>
+<p><img src="img/font-firge.png" alt="font-firge.png" /></p>
+<p>やったね🤗</p>
 </div>
 </div>
 
