--- a/book/wezterm/frame.html
+++ b/book/wezterm/frame.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>Frame - Commentary</title>
+        <title>Window Frame - Commentary</title>
 
 
         <!-- Custom HTML head -->
@@ -85,7 +85,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="../introduction.html"><strong aria-hidden="true">1.</strong> introduction</a></li><li class="chapter-item expanded affix "><li class="part-title">WezTerm</li><li class="chapter-item expanded "><a href="../wezterm/installation.html"><strong aria-hidden="true">2.</strong> installation</a></li><li class="chapter-item expanded "><a href="../wezterm/base.html"><strong aria-hidden="true">3.</strong> Base Settings</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../wezterm/window.html"><strong aria-hidden="true">3.1.</strong> Window</a></li><li class="chapter-item expanded "><a href="../wezterm/shell.html"><strong aria-hidden="true">3.2.</strong> Shell Prompt</a></li><li class="chapter-item expanded "><a href="../wezterm/font.html"><strong aria-hidden="true">3.3.</strong> Font</a></li><li class="chapter-item expanded "><a href="../wezterm/frame.html" class="active"><strong aria-hidden="true">3.4.</strong> Frame</a></li><li class="chapter-item expanded "><a href="../wezterm/keybind.html"><strong aria-hidden="true">3.5.</strong> Keybind</a></li><li class="chapter-item expanded "><a href="../wezterm/leader.html"><strong aria-hidden="true">3.6.</strong> Leader Key</a></li></ol></li><li class="chapter-item expanded "><a href="../wezterm/format.html"><strong aria-hidden="true">4.</strong> Format</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../wezterm/window-title.html"><strong aria-hidden="true">4.1.</strong> Window Title</a></li><li class="chapter-item expanded "><a href="../wezterm/tab.html"><strong aria-hidden="true">4.2.</strong> Tab</a></li></ol></li><li class="chapter-item expanded "><a href="../wezterm/status.html"><strong aria-hidden="true">5.</strong> Status Bar</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../wezterm/left-status.html"><strong aria-hidden="true">5.1.</strong> Left Status</a></li><li class="chapter-item expanded "><a href="../wezterm/right-status.html"><strong aria-hidden="true">5.2.</strong> Right Status</a></li></ol></li><li class="chapter-item expanded "><a href="../wezterm/custom.html"><strong aria-hidden="true">6.</strong> Custom Event</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../wezterm/toggle-font.html"><strong aria-hidden="true">6.1.</strong> Toggle Font</a></li></ol></li><li class="chapter-item expanded "><li class="part-title">neoVim</li><li class="chapter-item expanded affix "><li class="part-title">...To Be Continued</li></ol>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="../introduction.html"><strong aria-hidden="true">1.</strong> introduction</a></li><li class="chapter-item expanded affix "><li class="part-title">WezTerm</li><li class="chapter-item expanded "><a href="../wezterm/installation.html"><strong aria-hidden="true">2.</strong> installation</a></li><li class="chapter-item expanded "><a href="../wezterm/base.html"><strong aria-hidden="true">3.</strong> Base Settings</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../wezterm/window.html"><strong aria-hidden="true">3.1.</strong> Window</a></li><li class="chapter-item expanded "><a href="../wezterm/shell.html"><strong aria-hidden="true">3.2.</strong> Shell Prompt</a></li><li class="chapter-item expanded "><a href="../wezterm/font.html"><strong aria-hidden="true">3.3.</strong> Font</a></li><li class="chapter-item expanded "><a href="../wezterm/frame.html" class="active"><strong aria-hidden="true">3.4.</strong> Window Frame</a></li><li class="chapter-item expanded "><a href="../wezterm/keybind.html"><strong aria-hidden="true">3.5.</strong> Key Binding</a></li><li class="chapter-item expanded "><a href="../wezterm/leader.html"><strong aria-hidden="true">3.6.</strong> Leader Key</a></li></ol></li><li class="chapter-item expanded "><a href="../wezterm/format.html"><strong aria-hidden="true">4.</strong> Format</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../wezterm/window-title.html"><strong aria-hidden="true">4.1.</strong> Window Title</a></li><li class="chapter-item expanded "><a href="../wezterm/tab.html"><strong aria-hidden="true">4.2.</strong> Tab</a></li></ol></li><li class="chapter-item expanded "><a href="../wezterm/status.html"><strong aria-hidden="true">5.</strong> Status Bar</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../wezterm/left-status.html"><strong aria-hidden="true">5.1.</strong> Left Status</a></li><li class="chapter-item expanded "><a href="../wezterm/right-status.html"><strong aria-hidden="true">5.2.</strong> Right Status</a></li></ol></li><li class="chapter-item expanded "><a href="../wezterm/custom.html"><strong aria-hidden="true">6.</strong> Custom Event</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../wezterm/toggle-font.html"><strong aria-hidden="true">6.1.</strong> Toggle Font</a></li></ol></li><li class="chapter-item expanded "><li class="part-title">neoVim</li><li class="chapter-item expanded affix "><li class="part-title">...To Be Continued</li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -155,9 +155,8 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="frame"><a class="header" href="#frame">Frame</a></h1>
-<p>コンソール部分はだいぶいい感じになってきたので、次はフレーム周りの設定をしていきましょう。</p>
-<h2 id="window-frame"><a class="header" href="#window-frame">Window Frame</a></h2>
+                        <h1 id="window-frame"><a class="header" href="#window-frame">Window Frame</a></h1>
+<p>コンソールがいい感じになってきたので、次はウィンドウフレーム周りの設定をしていきましょう。</p>
 <div id="admonition-window_frame---wezs-terminal-emulatorhttpswezfurlongorgweztermconfigluaconfigwindow_framehtml" class="admonition note">
 <div class="admonition-title">
 <p><a href="https://wezfurlong.org/wezterm/config/lua/config/window_frame.html">window_frame - Wez's Terminal Emulator</a></p>
@@ -172,7 +171,7 @@
 <p>...いや、一回細かく変えてみたこともあったんですが、最終的にはデフォルトでいいかーってなりました。</p>
 <h2 id="font"><a class="header" href="#font">Font</a></h2>
 <p>これもほぼデフォルトのままで、フォントサイズだけ変える程度にしています。</p>
-<p>これはもう前回やっているフォント設定と同じですね。</p>
+<p>前回やっているフォント設定と同じですね。</p>
 <div id="admonition-native-fancy-tab-bar-appearancehttpswezfurlongorgweztermconfigappearancehtmlnative-fancy-tab-bar-appearance" class="admonition note">
 <div class="admonition-title">
 <p><a href="https://wezfurlong.org/wezterm/config/appearance.html#native-fancy-tab-bar-appearance">Native (Fancy) Tab Bar appearance</a></p>
@@ -199,8 +198,7 @@
 </div>
 </div>
 <h2 id="fancy-or-retro"><a class="header" href="#fancy-or-retro">Fancy or Retro</a></h2>
-<p>上で突然ファンシータブバーという文言が出てきましたが、
-<code>WezTerm</code>のタブバーには、ファンシーとレトロの2種類があります。</p>
+<p>前項で、突然ファンシータブバーという文言が出てきましたが、<code>WezTerm</code>のタブバーには、ファンシーとレトロの2種類があります。</p>
 <div id="admonition-use_fancy_tab_barhttpswezfurlongorgweztermconfigluaconfiguse_fancy_tab_barhtml" class="admonition note">
 <div class="admonition-title">
 <p><a href="https://wezfurlong.org/wezterm/config/lua/config/use_fancy_tab_bar.html">use_fancy_tab_bar</a></p>
@@ -213,7 +211,7 @@
 <p>false に設定すると、タブバーはメインのターミナルフォントを使用したレトロなスタイルで表示されます。</p>
 </div>
 </div>
-<p>わたしはファンシー派かなぁ。なので何もしません。</p>
+<p>わたしはファンシー派かなぁ😆 なので何もしません。</p>
 <p>レトロ派の方は以下を記述しましょう。</p>
 <div id="admonition-weztermlua-1" class="admonition example">
 <div class="admonition-title">
