--- a/book/wezterm/keybind.html
+++ b/book/wezterm/keybind.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>Keybind - Commentary</title>
+        <title>Key Binding - Commentary</title>
 
 
         <!-- Custom HTML head -->
@@ -85,7 +85,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="../introduction.html"><strong aria-hidden="true">1.</strong> introduction</a></li><li class="chapter-item expanded affix "><li class="part-title">WezTerm</li><li class="chapter-item expanded "><a href="../wezterm/installation.html"><strong aria-hidden="true">2.</strong> installation</a></li><li class="chapter-item expanded "><a href="../wezterm/base.html"><strong aria-hidden="true">3.</strong> Base Settings</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../wezterm/window.html"><strong aria-hidden="true">3.1.</strong> Window</a></li><li class="chapter-item expanded "><a href="../wezterm/shell.html"><strong aria-hidden="true">3.2.</strong> Shell Prompt</a></li><li class="chapter-item expanded "><a href="../wezterm/font.html"><strong aria-hidden="true">3.3.</strong> Font</a></li><li class="chapter-item expanded "><a href="../wezterm/frame.html"><strong aria-hidden="true">3.4.</strong> Frame</a></li><li class="chapter-item expanded "><a href="../wezterm/keybind.html" class="active"><strong aria-hidden="true">3.5.</strong> Keybind</a></li><li class="chapter-item expanded "><a href="../wezterm/leader.html"><strong aria-hidden="true">3.6.</strong> Leader Key</a></li></ol></li><li class="chapter-item expanded "><a href="../wezterm/format.html"><strong aria-hidden="true">4.</strong> Format</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../wezterm/window-title.html"><strong aria-hidden="true">4.1.</strong> Window Title</a></li><li class="chapter-item expanded "><a href="../wezterm/tab.html"><strong aria-hidden="true">4.2.</strong> Tab</a></li></ol></li><li class="chapter-item expanded "><a href="../wezterm/status.html"><strong aria-hidden="true">5.</strong> Status Bar</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../wezterm/left-status.html"><strong aria-hidden="true">5.1.</strong> Left Status</a></li><li class="chapter-item expanded "><a href="../wezterm/right-status.html"><strong aria-hidden="true">5.2.</strong> Right Status</a></li></ol></li><li class="chapter-item expanded "><a href="../wezterm/custom.html"><strong aria-hidden="true">6.</strong> Custom Event</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../wezterm/toggle-font.html"><strong aria-hidden="true">6.1.</strong> Toggle Font</a></li></ol></li><li class="chapter-item expanded "><li class="part-title">neoVim</li><li class="chapter-item expanded affix "><li class="part-title">...To Be Continued</li></ol>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="../introduction.html"><strong aria-hidden="true">1.</strong> introduction</a></li><li class="chapter-item expanded affix "><li class="part-title">WezTerm</li><li class="chapter-item expanded "><a href="../wezterm/installation.html"><strong aria-hidden="true">2.</strong> installation</a></li><li class="chapter-item expanded "><a href="../wezterm/base.html"><strong aria-hidden="true">3.</strong> Base Settings</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../wezterm/window.html"><strong aria-hidden="true">3.1.</strong> Window</a></li><li class="chapter-item expanded "><a href="../wezterm/shell.html"><strong aria-hidden="true">3.2.</strong> Shell Prompt</a></li><li class="chapter-item expanded "><a href="../wezterm/font.html"><strong aria-hidden="true">3.3.</strong> Font</a></li><li class="chapter-item expanded "><a href="../wezterm/frame.html"><strong aria-hidden="true">3.4.</strong> Window Frame</a></li><li class="chapter-item expanded "><a href="../wezterm/keybind.html" class="active"><strong aria-hidden="true">3.5.</strong> Key Binding</a></li><li class="chapter-item expanded "><a href="../wezterm/leader.html"><strong aria-hidden="true">3.6.</strong> Leader Key</a></li></ol></li><li class="chapter-item expanded "><a href="../wezterm/format.html"><strong aria-hidden="true">4.</strong> Format</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../wezterm/window-title.html"><strong aria-hidden="true">4.1.</strong> Window Title</a></li><li class="chapter-item expanded "><a href="../wezterm/tab.html"><strong aria-hidden="true">4.2.</strong> Tab</a></li></ol></li><li class="chapter-item expanded "><a href="../wezterm/status.html"><strong aria-hidden="true">5.</strong> Status Bar</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../wezterm/left-status.html"><strong aria-hidden="true">5.1.</strong> Left Status</a></li><li class="chapter-item expanded "><a href="../wezterm/right-status.html"><strong aria-hidden="true">5.2.</strong> Right Status</a></li></ol></li><li class="chapter-item expanded "><a href="../wezterm/custom.html"><strong aria-hidden="true">6.</strong> Custom Event</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../wezterm/toggle-font.html"><strong aria-hidden="true">6.1.</strong> Toggle Font</a></li></ol></li><li class="chapter-item expanded "><li class="part-title">neoVim</li><li class="chapter-item expanded affix "><li class="part-title">...To Be Continued</li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -155,17 +155,17 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="keybind"><a class="header" href="#keybind">Keybind</a></h1>
-<p>ここはちょっと説明が難しいというか、どこまで<code>WezTerm</code>をメインに持ってくるのかみたいなところがあります。</p>
+                        <h1 id="key-binding"><a class="header" href="#key-binding">Key Binding</a></h1>
+<p>ここはちょっと難しいというか、どこまで<code>WezTerm</code>をメインに持ってくるのかみたいなところがあります。</p>
 <p>例えば<code>tmux</code>。</p>
 <p><code>WezTerm</code>自体が<code>tmux</code>と同等かそれ以上の機能を持っているので、
 <code>WezTerm</code>に対して<code>tmux</code>と同じキーバインドを与えてしまえば、これは不要になるわけです。<sup class="footnote-reference"><a href="#a">1</a></sup></p>
-<p>と言っても完全にローカルでしか使わない人間だから大丈夫なだけで、ネットワークを介して使う場合には問題もあるかもしれません。</p>
+<p>と言ってもわたしがローカルでしか使っていないから大丈夫なだけで、ネットワークを介して使う場合は困る事もあるかもしれません。</p>
 <p>実際、デフォルトでは徹底的に他のソフトウェアとの衝突を避けています。</p>
-<div id="admonition-default-key-assignmentshttpswezfurlongorgweztermconfigdefault-keyshtml" class="admonition note">
+<div id="admonition-default-shortcut--key-binding-assignmentshttpswezfurlongorgweztermconfigdefault-keyshtml" class="admonition note">
 <div class="admonition-title">
-<p><a href="https://wezfurlong.org/wezterm/config/default-keys.html">Default Key Assignments</a></p>
-<p><a class="admonition-anchor-link" href="#admonition-default-key-assignmentshttpswezfurlongorgweztermconfigdefault-keyshtml"></a></p>
+<p><a href="https://wezfurlong.org/wezterm/config/default-keys.html">Default Shortcut / Key Binding Assignments</a></p>
+<p><a class="admonition-anchor-link" href="#admonition-default-shortcut--key-binding-assignmentshttpswezfurlongorgweztermconfigdefault-keyshtml"></a></p>
 </div>
 <div>
 <p>The default key assignments are shown in the table.</p>
@@ -197,8 +197,8 @@
 </div>
 <p><img src="img/key-now.png" alt="key-now.png" /></p>
 <p>そう、これが現在のキーバインドですね。</p>
-<h2 id="キーバインドカスタマイズ下地"><a class="header" href="#キーバインドカスタマイズ下地">キーバインドカスタマイズ下地</a></h2>
-<p>で、ここで提案なんですが、一度自分の設定ファイルに落とし込んじゃったらどうかな？と思うわけです。</p>
+<h2 id="設定を落とし込む"><a class="header" href="#設定を落とし込む">設定を落とし込む</a></h2>
+<p>で、ここで提案なんですが、キーバインドを自分の設定ファイルに落とし込んじゃったらどうかな？と思うわけです。</p>
 <p>それをやるにはどうすれば簡単かな〜っていう話になるんですけど、方法はすでにありました。</p>
 <div id="admonition-command-1" class="admonition quote">
 <div class="admonition-title">
@@ -211,7 +211,7 @@
 </div>
 </div>
 <p><img src="img/key-now-lua.png" alt="key-now-lua.png" /></p>
-<p>さすがですね。もはやレールは存在していました。これを<code>keybinds.lua</code>に持っていけば良いだけです。</p>
+<p>さすがですね☺️ もはやレールは存在していました。これを<code>keybinds.lua</code>に持っていけば良いだけです。</p>
 <p>これはもうプロっぽく片付けましょう。シェル芸というやつです✨</p>
 <div id="admonition-command-2" class="admonition quote">
 <div class="admonition-title">
@@ -233,7 +233,7 @@
 <p><code>~/.config/wezterm</code>に移動するか、出力先を<code>~/.config/wezterm/keybinds.lua</code>に指定してください。</p>
 </div>
 </div>
-<p>これだけでもう直接流し込めちゃうんですね。簡単〜。</p>
+<p>これだけでもう直接流し込めちゃうんですね。簡単〜😆</p>
 <h2 id="読み込み先を切り替える"><a class="header" href="#読み込み先を切り替える">読み込み先を切り替える</a></h2>
 <p>ここまでは暗黙的にデフォルト設定が適用されていましたが、これからは自分で作った<code>keybinds.lua</code>を使っていきましょう。</p>
 <div id="admonition-weztermlua" class="admonition example">
@@ -247,10 +247,10 @@
 </div>
 </div>
 <p>冒頭のリンクを再掲しますが、一番下にこのようにあります。</p>
-<div id="admonition-default-key-assignmentshttpswezfurlongorgweztermconfigdefault-keyshtml-1" class="admonition note">
+<div id="admonition-default-key-assignmentshttpswezfurlongorgweztermconfigdefault-keyshtml" class="admonition note">
 <div class="admonition-title">
 <p><a href="https://wezfurlong.org/wezterm/config/default-keys.html">Default Key Assignments</a></p>
-<p><a class="admonition-anchor-link" href="#admonition-default-key-assignmentshttpswezfurlongorgweztermconfigdefault-keyshtml-1"></a></p>
+<p><a class="admonition-anchor-link" href="#admonition-default-key-assignmentshttpswezfurlongorgweztermconfigdefault-keyshtml"></a></p>
 </div>
 <div>
 <p>If you don't want the default assignments to be registered, you can disable all of them with this configuration; if you chose to do this, you must explicitly register every binding.</p>
