--- a/book/wezterm/shell.html
+++ b/book/wezterm/shell.html
@@ -85,7 +85,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="../introduction.html"><strong aria-hidden="true">1.</strong> introduction</a></li><li class="chapter-item expanded affix "><li class="part-title">WezTerm</li><li class="chapter-item expanded "><a href="../wezterm/installation.html"><strong aria-hidden="true">2.</strong> installation</a></li><li class="chapter-item expanded "><a href="../wezterm/base.html"><strong aria-hidden="true">3.</strong> Base Settings</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../wezterm/window.html"><strong aria-hidden="true">3.1.</strong> Window</a></li><li class="chapter-item expanded "><a href="../wezterm/shell.html" class="active"><strong aria-hidden="true">3.2.</strong> Shell Prompt</a></li><li class="chapter-item expanded "><a href="../wezterm/font.html"><strong aria-hidden="true">3.3.</strong> Font</a></li><li class="chapter-item expanded "><a href="../wezterm/frame.html"><strong aria-hidden="true">3.4.</strong> Frame</a></li><li class="chapter-item expanded "><a href="../wezterm/keybind.html"><strong aria-hidden="true">3.5.</strong> Keybind</a></li><li class="chapter-item expanded "><a href="../wezterm/leader.html"><strong aria-hidden="true">3.6.</strong> Leader Key</a></li></ol></li><li class="chapter-item expanded "><a href="../wezterm/format.html"><strong aria-hidden="true">4.</strong> Format</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../wezterm/window-title.html"><strong aria-hidden="true">4.1.</strong> Window Title</a></li><li class="chapter-item expanded "><a href="../wezterm/tab.html"><strong aria-hidden="true">4.2.</strong> Tab</a></li></ol></li><li class="chapter-item expanded "><a href="../wezterm/status.html"><strong aria-hidden="true">5.</strong> Status Bar</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../wezterm/left-status.html"><strong aria-hidden="true">5.1.</strong> Left Status</a></li><li class="chapter-item expanded "><a href="../wezterm/right-status.html"><strong aria-hidden="true">5.2.</strong> Right Status</a></li></ol></li><li class="chapter-item expanded "><a href="../wezterm/custom.html"><strong aria-hidden="true">6.</strong> Custom Event</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../wezterm/toggle-font.html"><strong aria-hidden="true">6.1.</strong> Toggle Font</a></li></ol></li><li class="chapter-item expanded "><li class="part-title">neoVim</li><li class="chapter-item expanded affix "><li class="part-title">...To Be Continued</li></ol>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="../introduction.html"><strong aria-hidden="true">1.</strong> introduction</a></li><li class="chapter-item expanded affix "><li class="part-title">WezTerm</li><li class="chapter-item expanded "><a href="../wezterm/installation.html"><strong aria-hidden="true">2.</strong> installation</a></li><li class="chapter-item expanded "><a href="../wezterm/base.html"><strong aria-hidden="true">3.</strong> Base Settings</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../wezterm/window.html"><strong aria-hidden="true">3.1.</strong> Window</a></li><li class="chapter-item expanded "><a href="../wezterm/shell.html" class="active"><strong aria-hidden="true">3.2.</strong> Shell Prompt</a></li><li class="chapter-item expanded "><a href="../wezterm/font.html"><strong aria-hidden="true">3.3.</strong> Font</a></li><li class="chapter-item expanded "><a href="../wezterm/frame.html"><strong aria-hidden="true">3.4.</strong> Window Frame</a></li><li class="chapter-item expanded "><a href="../wezterm/keybind.html"><strong aria-hidden="true">3.5.</strong> Key Binding</a></li><li class="chapter-item expanded "><a href="../wezterm/leader.html"><strong aria-hidden="true">3.6.</strong> Leader Key</a></li></ol></li><li class="chapter-item expanded "><a href="../wezterm/format.html"><strong aria-hidden="true">4.</strong> Format</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../wezterm/window-title.html"><strong aria-hidden="true">4.1.</strong> Window Title</a></li><li class="chapter-item expanded "><a href="../wezterm/tab.html"><strong aria-hidden="true">4.2.</strong> Tab</a></li></ol></li><li class="chapter-item expanded "><a href="../wezterm/status.html"><strong aria-hidden="true">5.</strong> Status Bar</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../wezterm/left-status.html"><strong aria-hidden="true">5.1.</strong> Left Status</a></li><li class="chapter-item expanded "><a href="../wezterm/right-status.html"><strong aria-hidden="true">5.2.</strong> Right Status</a></li></ol></li><li class="chapter-item expanded "><a href="../wezterm/custom.html"><strong aria-hidden="true">6.</strong> Custom Event</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="../wezterm/toggle-font.html"><strong aria-hidden="true">6.1.</strong> Toggle Font</a></li></ol></li><li class="chapter-item expanded "><li class="part-title">neoVim</li><li class="chapter-item expanded affix "><li class="part-title">...To Be Continued</li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -158,8 +158,8 @@
                         <h1 id="shell-prompt"><a class="header" href="#shell-prompt">Shell Prompt</a></h1>
 <p><code>WezTerm</code>の設定からは少し逸れますが、先にシェルプロンプトのカスタマイズをやってしまいましょう。</p>
 <h2 id="starship"><a class="header" href="#starship">Starship</a></h2>
-<p>技術系サイトを見ていると、こぞって紹介されている感のある<code>starship</code>です。</p>
-<p>まあ、これは紹介したくなりますよね〜。導入が簡単なのに綺麗だし。</p>
+<p>技術系サイトを見ていると、こぞって紹介されている感のある<code>StarShip</code>です。</p>
+<p>まあ、これは紹介したくなりますよね〜。導入が簡単なのに綺麗だし🥴</p>
 <div id="admonition-starship-cross-shell-prompthttpsstarshiprs" class="admonition note">
 <div class="admonition-title">
 <p><a href="https://starship.rs/">StarShip Cross-Shell Prompt</a></p>
@@ -180,7 +180,7 @@
 </code></pre>
 <p>と書いてありますね。</p>
 <p>本来なら「なんかめんどくさそうだな〜」となるところですが安心してください。入ってますよ。</p>
-<p><code>WezTerm</code>には<code>Roboto</code>というフォントがビルトインされているのですが、これが<code>Nerd Font</code>の仲間なんですね。</p>
+<p><code>WezTerm</code>には<code>Roboto</code>というフォントがビルトインされているのですが、これが<code>Nerd Font</code>を含んでいるんですね。</p>
 <div id="admonition-google-fonts--robotohttpsfontsgooglecomspecimenroboto" class="admonition note">
 <div class="admonition-title">
 <p><a href="https://fonts.google.com/specimen/Roboto">Google Fonts &gt; Roboto</a></p>
@@ -206,7 +206,7 @@
 </code></pre>
 </div>
 </div>
-と、やってもいいのですが、わたしは`homebrew`でやっちゃいます。
+<p>と、やってもいいのですが、わたしは<code>homebrew</code>でやっちゃいます。</p>
 <div id="admonition-command-1" class="admonition quote">
 <div class="admonition-title">
 <p>Command</p>
@@ -245,12 +245,13 @@
 <p><a class="admonition-anchor-link" href="#admonition-warning"></a></p>
 </div>
 <div>
-<p>繰り返しますが「追記」です。先に記述されているものがあった場合、それは消さないでください。</p>
+<p>繰り返しますが「追記」です。先に記述されているものがあった場合、そのまま前か後ろに追記してください。</p>
 </div>
 </div>
 <h3 id="step-3"><a class="header" href="#step-3">Step 3.</a></h3>
-<p>コンフィグファイルは、また別の機会に。<code>WezTerm</code>を一旦終了して再度起動し直しましょう。
-<img src="img/starship.png" alt="starship.png" /></p>
+<p>コンフィグファイルは、また別の機会に。</p>
+<p><code>WezTerm</code>を一旦終了して再度起動し直しましょう。</p>
+<p><img src="img/starship.png" alt="starship.png" /></p>
 <p><code>3.1 Window</code>で設定したカラースキームが適用されているのを確認できましたね。</p>
 <p>あと、月が綺麗ですね。(<code>wezterm</code>ディレクトリに行くと手っ取り早く見られます。)</p>
 <div id="admonition-success" class="admonition success">
