--- a/book/print.html
+++ b/book/print.html
@@ -86,7 +86,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="introduction.html"><strong aria-hidden="true">1.</strong> introduction</a></li><li class="chapter-item expanded affix "><li class="part-title">WezTerm</li><li class="chapter-item expanded "><a href="wezterm/installation.html"><strong aria-hidden="true">2.</strong> installation</a></li><li class="chapter-item expanded "><a href="wezterm/base.html"><strong aria-hidden="true">3.</strong> Base Settings</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="wezterm/window.html"><strong aria-hidden="true">3.1.</strong> Window</a></li><li class="chapter-item expanded "><a href="wezterm/shell.html"><strong aria-hidden="true">3.2.</strong> Shell Prompt</a></li><li class="chapter-item expanded "><a href="wezterm/font.html"><strong aria-hidden="true">3.3.</strong> Font</a></li><li class="chapter-item expanded "><a href="wezterm/frame.html"><strong aria-hidden="true">3.4.</strong> Frame</a></li><li class="chapter-item expanded "><a href="wezterm/keybind.html"><strong aria-hidden="true">3.5.</strong> Keybind</a></li><li class="chapter-item expanded "><a href="wezterm/leader.html"><strong aria-hidden="true">3.6.</strong> Leader Key</a></li></ol></li><li class="chapter-item expanded "><a href="wezterm/format.html"><strong aria-hidden="true">4.</strong> Format</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="wezterm/window-title.html"><strong aria-hidden="true">4.1.</strong> Window Title</a></li><li class="chapter-item expanded "><a href="wezterm/tab.html"><strong aria-hidden="true">4.2.</strong> Tab</a></li></ol></li><li class="chapter-item expanded "><a href="wezterm/status.html"><strong aria-hidden="true">5.</strong> Status Bar</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="wezterm/left-status.html"><strong aria-hidden="true">5.1.</strong> Left Status</a></li><li class="chapter-item expanded "><a href="wezterm/right-status.html"><strong aria-hidden="true">5.2.</strong> Right Status</a></li></ol></li><li class="chapter-item expanded "><a href="wezterm/custom.html"><strong aria-hidden="true">6.</strong> Custom Event</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="wezterm/toggle-font.html"><strong aria-hidden="true">6.1.</strong> Toggle Font</a></li></ol></li><li class="chapter-item expanded "><li class="part-title">neoVim</li><li class="chapter-item expanded affix "><li class="part-title">...To Be Continued</li></ol>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="introduction.html"><strong aria-hidden="true">1.</strong> introduction</a></li><li class="chapter-item expanded affix "><li class="part-title">WezTerm</li><li class="chapter-item expanded "><a href="wezterm/installation.html"><strong aria-hidden="true">2.</strong> installation</a></li><li class="chapter-item expanded "><a href="wezterm/base.html"><strong aria-hidden="true">3.</strong> Base Settings</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="wezterm/window.html"><strong aria-hidden="true">3.1.</strong> Window</a></li><li class="chapter-item expanded "><a href="wezterm/shell.html"><strong aria-hidden="true">3.2.</strong> Shell Prompt</a></li><li class="chapter-item expanded "><a href="wezterm/font.html"><strong aria-hidden="true">3.3.</strong> Font</a></li><li class="chapter-item expanded "><a href="wezterm/frame.html"><strong aria-hidden="true">3.4.</strong> Window Frame</a></li><li class="chapter-item expanded "><a href="wezterm/keybind.html"><strong aria-hidden="true">3.5.</strong> Key Binding</a></li><li class="chapter-item expanded "><a href="wezterm/leader.html"><strong aria-hidden="true">3.6.</strong> Leader Key</a></li></ol></li><li class="chapter-item expanded "><a href="wezterm/format.html"><strong aria-hidden="true">4.</strong> Format</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="wezterm/window-title.html"><strong aria-hidden="true">4.1.</strong> Window Title</a></li><li class="chapter-item expanded "><a href="wezterm/tab.html"><strong aria-hidden="true">4.2.</strong> Tab</a></li></ol></li><li class="chapter-item expanded "><a href="wezterm/status.html"><strong aria-hidden="true">5.</strong> Status Bar</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="wezterm/left-status.html"><strong aria-hidden="true">5.1.</strong> Left Status</a></li><li class="chapter-item expanded "><a href="wezterm/right-status.html"><strong aria-hidden="true">5.2.</strong> Right Status</a></li></ol></li><li class="chapter-item expanded "><a href="wezterm/custom.html"><strong aria-hidden="true">6.</strong> Custom Event</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="wezterm/toggle-font.html"><strong aria-hidden="true">6.1.</strong> Toggle Font</a></li></ol></li><li class="chapter-item expanded "><li class="part-title">neoVim</li><li class="chapter-item expanded affix "><li class="part-title">...To Be Continued</li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -172,7 +172,7 @@
 <p><code>Wezterm</code>の設定については、ほぼ<code>lua</code>ファイルの編集で完結するため、ターミナルコマンドを使う場面は限られていますし、
 コマンドの例示も全て行っているつもりではありますが、
 それでもコマンドを使って操作したことがない場合はやはり怖いです。</p>
-<p>逆に、ファイルの編集自体は'vim'などのターミナル上で動くソフトウェアではなく、<code>Xcode</code>や<code>Visual Studio Code</code>などでも構いません。
+<p>逆に、ファイルの編集自体は<code>vim</code>などのターミナル上で動くソフトウェアではなく、<code>Xcode</code>や<code>Visual Studio Code</code>などでも構いません。
 これについては<code>3.Base Settings</code>で示します。</p>
 </div>
 </div>
@@ -227,7 +227,7 @@ I enjoy using it💓</p>
 </div>
 </div>
 <div class="footnote-definition" id="unix"><sup class="footnote-definition-label">1</sup>
-<p>Unix だと bash が動いているでしょうか。</p>
+<p>Unix だと<code>bash</code>が動いているでしょうか。</p>
 </div>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="base-settings"><a class="header" href="#base-settings">Base Settings</a></h1>
 <p>特に難しいことを考えずに ホームフォルダに <code>.wezterm.lua</code> を置いても良いのですが、
@@ -397,8 +397,8 @@ I enjoy using it💓</p>
 <p><a class="admonition-anchor-link" href="wezterm/window.html#admonition-success"></a></p>
 </div>
 <div>
-<p>カラースキームは白文字しかないから「ちょっと何言ってるかわかんない」状態ですが、透過については確認できましたね。</p>
-<p>次は、せっかく設定したカラースキームをやっぱり見たいので、少し脇に逸れてプロンプトを変えてみましょう。</p>
+<p>カラースキームは白文字しかない状態だと「ちょっと何言ってるかわかんない」ですが、透過については確認できましたね。</p>
+<p>次は、せっかく設定したカラースキームを見たいので、少し脇に逸れてプロンプトを変えてみましょう。</p>
 </div>
 </div>
 <div class="footnote-definition" id="a"><sup class="footnote-definition-label">1</sup>
@@ -407,8 +407,8 @@ I enjoy using it💓</p>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="shell-prompt"><a class="header" href="#shell-prompt">Shell Prompt</a></h1>
 <p><code>WezTerm</code>の設定からは少し逸れますが、先にシェルプロンプトのカスタマイズをやってしまいましょう。</p>
 <h2 id="starship"><a class="header" href="#starship">Starship</a></h2>
-<p>技術系サイトを見ていると、こぞって紹介されている感のある<code>starship</code>です。</p>
-<p>まあ、これは紹介したくなりますよね〜。導入が簡単なのに綺麗だし。</p>
+<p>技術系サイトを見ていると、こぞって紹介されている感のある<code>StarShip</code>です。</p>
+<p>まあ、これは紹介したくなりますよね〜。導入が簡単なのに綺麗だし🥴</p>
 <div id="admonition-starship-cross-shell-prompthttpsstarshiprs" class="admonition note">
 <div class="admonition-title">
 <p><a href="https://starship.rs/">StarShip Cross-Shell Prompt</a></p>
@@ -429,7 +429,7 @@ I enjoy using it💓</p>
 </code></pre>
 <p>と書いてありますね。</p>
 <p>本来なら「なんかめんどくさそうだな〜」となるところですが安心してください。入ってますよ。</p>
-<p><code>WezTerm</code>には<code>Roboto</code>というフォントがビルトインされているのですが、これが<code>Nerd Font</code>の仲間なんですね。</p>
+<p><code>WezTerm</code>には<code>Roboto</code>というフォントがビルトインされているのですが、これが<code>Nerd Font</code>を含んでいるんですね。</p>
 <div id="admonition-google-fonts--robotohttpsfontsgooglecomspecimenroboto" class="admonition note">
 <div class="admonition-title">
 <p><a href="https://fonts.google.com/specimen/Roboto">Google Fonts &gt; Roboto</a></p>
@@ -455,7 +455,7 @@ I enjoy using it💓</p>
 </code></pre>
 </div>
 </div>
-と、やってもいいのですが、わたしは`homebrew`でやっちゃいます。
+<p>と、やってもいいのですが、わたしは<code>homebrew</code>でやっちゃいます。</p>
 <div id="admonition-command-1" class="admonition quote">
 <div class="admonition-title">
 <p>Command</p>
@@ -494,12 +494,13 @@ I enjoy using it💓</p>
 <p><a class="admonition-anchor-link" href="wezterm/shell.html#admonition-warning"></a></p>
 </div>
 <div>
-<p>繰り返しますが「追記」です。先に記述されているものがあった場合、それは消さないでください。</p>
+<p>繰り返しますが「追記」です。先に記述されているものがあった場合、そのまま前か後ろに追記してください。</p>
 </div>
 </div>
 <h3 id="step-3"><a class="header" href="#step-3">Step 3.</a></h3>
-<p>コンフィグファイルは、また別の機会に。<code>WezTerm</code>を一旦終了して再度起動し直しましょう。
-<img src="wezterm/img/starship.png" alt="starship.png" /></p>
+<p>コンフィグファイルは、また別の機会に。</p>
+<p><code>WezTerm</code>を一旦終了して再度起動し直しましょう。</p>
+<p><img src="wezterm/img/starship.png" alt="starship.png" /></p>
 <p><code>3.1 Window</code>で設定したカラースキームが適用されているのを確認できましたね。</p>
 <p>あと、月が綺麗ですね。(<code>wezterm</code>ディレクトリに行くと手っ取り早く見られます。)</p>
 <div id="admonition-success" class="admonition success">
@@ -523,7 +524,7 @@ I enjoy using it💓</p>
 <div>
 <p>わたしが深く理解しているわけではないので上手く説明できませんが、</p>
 <p>要は基本的な文字「あ」とか「意」とか 「abc」 とか「!@#」などに加えて特殊な記号フォントを加えたものです。</p>
-<p>月、出てましたよね。あれです。</p>
+<p>月、出てましたよね。あれです😆</p>
 </div>
 </div>
 <h2 id="ダウンロード"><a class="header" href="#ダウンロード">ダウンロード</a></h2>
@@ -539,18 +540,18 @@ I enjoy using it💓</p>
 </div>
 <p>「ダウンロードはこちら」というリンクから、お言葉に甘えて<code>FirgeNerd_v0.2.0.zip</code>をダウンロードしましょう。感謝😀</p>
 <h2 id="インストール-1"><a class="header" href="#インストール-1">インストール</a></h2>
-<p>フォントのインストールは OS の作業になるので、御多分に洩れず<code>macOS</code>のやり方だけ載せます。</p>
+<p>フォントのインストールは OS の作業になるので、<code>macOS</code>のやり方だけ軽く載せます。</p>
 <p>...基本的にはどのOSでも、ダウンロードしてきたファイルを開けば「インストールしますか？」的なの出てきますよね。多分。</p>
 <p>やればできる!!</p>
 <p><img src="wezterm/img/font1.png" alt="font1.png" />
 <img src="wezterm/img/font2.png" alt="font2.png" />
 <img src="wezterm/img/font3.png" alt="font3.png" /></p>
-<p>ほらできた!!</p>
+<p>ほらできた🤗</p>
 <h2 id="wezterm-設定"><a class="header" href="#wezterm-設定">WezTerm 設定</a></h2>
-<p>これをWezTerm に設定すれば良さそう。</p>
-<div id="admonition-weztermfonthttpswezfurlongorgweztermconfigluaweztermfonthtml" class="admonition example">
+<p>で、このフォントを<code>WezTerm</code>に設定すれば良さそう。</p>
+<div id="admonition-weztermfonthttpswezfurlongorgweztermconfigluaweztermfonthtml" class="admonition note">
 <div class="admonition-title">
-<p>(wezterm.font)[https://wezfurlong.org/wezterm/config/lua/wezterm/font.html]</p>
+<p><a href="https://wezfurlong.org/wezterm/config/lua/wezterm/font.html">wezterm.font</a></p>
 <p><a class="admonition-anchor-link" href="wezterm/font.html#admonition-weztermfonthttpswezfurlongorgweztermconfigluaweztermfonthtml"></a></p>
 </div>
 <div>
@@ -576,11 +577,23 @@ font = require(&quot;wezterm&quot;).font(&quot;Firge35Nerd Console&quot;),
 <p><a class="admonition-anchor-link" href="wezterm/font.html#admonition-info-1"></a></p>
 </div>
 <div>
-<p>ファミリー名は Font Book 等で確認できます。「情報を確認する(command + i)」ですね。
+<p>ファミリー名は Font Book 等で確認できます。「情報を確認する(<code>command + i</code>)」ですね。
 <img src="wezterm/img/font-info.png" alt="font-info.png" /></p>
 </div>
 </div>
 <p>フォントサイズも指定できるので一緒に入れておきましょう。</p>
+<div id="admonition-httpswezfurlongorgweztermconfigluaconfigfont_sizehtml" class="admonition note">
+<div class="admonition-title">
+<p>https://wezfurlong.org/wezterm/config/lua/config/font_size.html</p>
+<p><a class="admonition-anchor-link" href="wezterm/font.html#admonition-httpswezfurlongorgweztermconfigluaconfigfont_sizehtml"></a></p>
+</div>
+<div>
+<p>Specifies the size of the font, measured in points.</p>
+<p>You may use fractional point sizes, such as 13.3, to fine tune the size.</p>
+<p>フォントのサイズをポイント数で指定します。</p>
+<p>13.3 のような小数点のサイズを使用して、サイズを微調整することができます。</p>
+</div>
+</div>
 <div id="admonition-weztermlua-1" class="admonition example">
 <div class="admonition-title">
 <p>wezterm.lua</p>
@@ -591,23 +604,23 @@ font = require(&quot;wezterm&quot;).font(&quot;Firge35Nerd Console&quot;),
 </code></pre>
 </div>
 </div>
-<p>Roboto:</p>
-<p><img src="wezterm/img/font-roboto.png" alt="font-roboto.png" /></p>
-<p>Firge35Nerd Console:</p>
-<p><img src="wezterm/img/font-firge.png" alt="font-firge.png" /></p>
+<p>上の例はデフォルト値そのままですが、お好みで調整してください。</p>
 <div id="admonition-success" class="admonition success">
 <div class="admonition-title">
 <p>Success</p>
 <p><a class="admonition-anchor-link" href="wezterm/font.html#admonition-success"></a></p>
 </div>
 <div>
-<p>どうでしょう？明らかに日本語が綺麗になりましたね。</p>
-<p>やったね❗️</p>
+<p>どうでしょう？明らかに日本語が綺麗になりましたね❗️</p>
+<p>Roboto:</p>
+<p><img src="wezterm/img/font-roboto.png" alt="font-roboto.png" /></p>
+<p>Firge35Nerd Console:</p>
+<p><img src="wezterm/img/font-firge.png" alt="font-firge.png" /></p>
+<p>やったね🤗</p>
 </div>
 </div>
-<div style="break-before: page; page-break-before: always;"></div><h1 id="frame"><a class="header" href="#frame">Frame</a></h1>
-<p>コンソール部分はだいぶいい感じになってきたので、次はフレーム周りの設定をしていきましょう。</p>
-<h2 id="window-frame"><a class="header" href="#window-frame">Window Frame</a></h2>
+<div style="break-before: page; page-break-before: always;"></div><h1 id="window-frame"><a class="header" href="#window-frame">Window Frame</a></h1>
+<p>コンソールがいい感じになってきたので、次はウィンドウフレーム周りの設定をしていきましょう。</p>
 <div id="admonition-window_frame---wezs-terminal-emulatorhttpswezfurlongorgweztermconfigluaconfigwindow_framehtml" class="admonition note">
 <div class="admonition-title">
 <p><a href="https://wezfurlong.org/wezterm/config/lua/config/window_frame.html">window_frame - Wez's Terminal Emulator</a></p>
@@ -622,7 +635,7 @@ font = require(&quot;wezterm&quot;).font(&quot;Firge35Nerd Console&quot;),
 <p>...いや、一回細かく変えてみたこともあったんですが、最終的にはデフォルトでいいかーってなりました。</p>
 <h2 id="font-1"><a class="header" href="#font-1">Font</a></h2>
 <p>これもほぼデフォルトのままで、フォントサイズだけ変える程度にしています。</p>
-<p>これはもう前回やっているフォント設定と同じですね。</p>
+<p>前回やっているフォント設定と同じですね。</p>
 <div id="admonition-native-fancy-tab-bar-appearancehttpswezfurlongorgweztermconfigappearancehtmlnative-fancy-tab-bar-appearance" class="admonition note">
 <div class="admonition-title">
 <p><a href="https://wezfurlong.org/wezterm/config/appearance.html#native-fancy-tab-bar-appearance">Native (Fancy) Tab Bar appearance</a></p>
@@ -649,8 +662,7 @@ font = require(&quot;wezterm&quot;).font(&quot;Firge35Nerd Console&quot;),
 </div>
 </div>
 <h2 id="fancy-or-retro"><a class="header" href="#fancy-or-retro">Fancy or Retro</a></h2>
-<p>上で突然ファンシータブバーという文言が出てきましたが、
-<code>WezTerm</code>のタブバーには、ファンシーとレトロの2種類があります。</p>
+<p>前項で、突然ファンシータブバーという文言が出てきましたが、<code>WezTerm</code>のタブバーには、ファンシーとレトロの2種類があります。</p>
 <div id="admonition-use_fancy_tab_barhttpswezfurlongorgweztermconfigluaconfiguse_fancy_tab_barhtml" class="admonition note">
 <div class="admonition-title">
 <p><a href="https://wezfurlong.org/wezterm/config/lua/config/use_fancy_tab_bar.html">use_fancy_tab_bar</a></p>
@@ -663,7 +675,7 @@ font = require(&quot;wezterm&quot;).font(&quot;Firge35Nerd Console&quot;),
 <p>false に設定すると、タブバーはメインのターミナルフォントを使用したレトロなスタイルで表示されます。</p>
 </div>
 </div>
-<p>わたしはファンシー派かなぁ。なので何もしません。</p>
+<p>わたしはファンシー派かなぁ😆 なので何もしません。</p>
 <p>レトロ派の方は以下を記述しましょう。</p>
 <div id="admonition-weztermlua-1" class="admonition example">
 <div class="admonition-title">
@@ -689,17 +701,17 @@ font = require(&quot;wezterm&quot;).font(&quot;Firge35Nerd Console&quot;),
 <p>次はキーバインドを変えてみましょう。</p>
 </div>
 </div>
-<div style="break-before: page; page-break-before: always;"></div><h1 id="keybind"><a class="header" href="#keybind">Keybind</a></h1>
-<p>ここはちょっと説明が難しいというか、どこまで<code>WezTerm</code>をメインに持ってくるのかみたいなところがあります。</p>
+<div style="break-before: page; page-break-before: always;"></div><h1 id="key-binding"><a class="header" href="#key-binding">Key Binding</a></h1>
+<p>ここはちょっと難しいというか、どこまで<code>WezTerm</code>をメインに持ってくるのかみたいなところがあります。</p>
 <p>例えば<code>tmux</code>。</p>
 <p><code>WezTerm</code>自体が<code>tmux</code>と同等かそれ以上の機能を持っているので、
 <code>WezTerm</code>に対して<code>tmux</code>と同じキーバインドを与えてしまえば、これは不要になるわけです。<sup class="footnote-reference"><a href="#a">1</a></sup></p>
-<p>と言っても完全にローカルでしか使わない人間だから大丈夫なだけで、ネットワークを介して使う場合には問題もあるかもしれません。</p>
+<p>と言ってもわたしがローカルでしか使っていないから大丈夫なだけで、ネットワークを介して使う場合は困る事もあるかもしれません。</p>
 <p>実際、デフォルトでは徹底的に他のソフトウェアとの衝突を避けています。</p>
-<div id="admonition-default-key-assignmentshttpswezfurlongorgweztermconfigdefault-keyshtml" class="admonition note">
+<div id="admonition-default-shortcut--key-binding-assignmentshttpswezfurlongorgweztermconfigdefault-keyshtml" class="admonition note">
 <div class="admonition-title">
-<p><a href="https://wezfurlong.org/wezterm/config/default-keys.html">Default Key Assignments</a></p>
-<p><a class="admonition-anchor-link" href="wezterm/keybind.html#admonition-default-key-assignmentshttpswezfurlongorgweztermconfigdefault-keyshtml"></a></p>
+<p><a href="https://wezfurlong.org/wezterm/config/default-keys.html">Default Shortcut / Key Binding Assignments</a></p>
+<p><a class="admonition-anchor-link" href="wezterm/keybind.html#admonition-default-shortcut--key-binding-assignmentshttpswezfurlongorgweztermconfigdefault-keyshtml"></a></p>
 </div>
 <div>
 <p>The default key assignments are shown in the table.</p>
@@ -731,8 +743,8 @@ font = require(&quot;wezterm&quot;).font(&quot;Firge35Nerd Console&quot;),
 </div>
 <p><img src="wezterm/img/key-now.png" alt="key-now.png" /></p>
 <p>そう、これが現在のキーバインドですね。</p>
-<h2 id="キーバインドカスタマイズ下地"><a class="header" href="#キーバインドカスタマイズ下地">キーバインドカスタマイズ下地</a></h2>
-<p>で、ここで提案なんですが、一度自分の設定ファイルに落とし込んじゃったらどうかな？と思うわけです。</p>
+<h2 id="設定を落とし込む"><a class="header" href="#設定を落とし込む">設定を落とし込む</a></h2>
+<p>で、ここで提案なんですが、キーバインドを自分の設定ファイルに落とし込んじゃったらどうかな？と思うわけです。</p>
 <p>それをやるにはどうすれば簡単かな〜っていう話になるんですけど、方法はすでにありました。</p>
 <div id="admonition-command-1" class="admonition quote">
 <div class="admonition-title">
@@ -745,7 +757,7 @@ font = require(&quot;wezterm&quot;).font(&quot;Firge35Nerd Console&quot;),
 </div>
 </div>
 <p><img src="wezterm/img/key-now-lua.png" alt="key-now-lua.png" /></p>
-<p>さすがですね。もはやレールは存在していました。これを<code>keybinds.lua</code>に持っていけば良いだけです。</p>
+<p>さすがですね☺️ もはやレールは存在していました。これを<code>keybinds.lua</code>に持っていけば良いだけです。</p>
 <p>これはもうプロっぽく片付けましょう。シェル芸というやつです✨</p>
 <div id="admonition-command-2" class="admonition quote">
 <div class="admonition-title">
@@ -767,7 +779,7 @@ font = require(&quot;wezterm&quot;).font(&quot;Firge35Nerd Console&quot;),
 <p><code>~/.config/wezterm</code>に移動するか、出力先を<code>~/.config/wezterm/keybinds.lua</code>に指定してください。</p>
 </div>
 </div>
-<p>これだけでもう直接流し込めちゃうんですね。簡単〜。</p>
+<p>これだけでもう直接流し込めちゃうんですね。簡単〜😆</p>
 <h2 id="読み込み先を切り替える"><a class="header" href="#読み込み先を切り替える">読み込み先を切り替える</a></h2>
 <p>ここまでは暗黙的にデフォルト設定が適用されていましたが、これからは自分で作った<code>keybinds.lua</code>を使っていきましょう。</p>
 <div id="admonition-weztermlua" class="admonition example">
@@ -781,10 +793,10 @@ font = require(&quot;wezterm&quot;).font(&quot;Firge35Nerd Console&quot;),
 </div>
 </div>
 <p>冒頭のリンクを再掲しますが、一番下にこのようにあります。</p>
-<div id="admonition-default-key-assignmentshttpswezfurlongorgweztermconfigdefault-keyshtml-1" class="admonition note">
+<div id="admonition-default-key-assignmentshttpswezfurlongorgweztermconfigdefault-keyshtml" class="admonition note">
 <div class="admonition-title">
 <p><a href="https://wezfurlong.org/wezterm/config/default-keys.html">Default Key Assignments</a></p>
-<p><a class="admonition-anchor-link" href="wezterm/keybind.html#admonition-default-key-assignmentshttpswezfurlongorgweztermconfigdefault-keyshtml-1"></a></p>
+<p><a class="admonition-anchor-link" href="wezterm/keybind.html#admonition-default-key-assignmentshttpswezfurlongorgweztermconfigdefault-keyshtml"></a></p>
 </div>
 <div>
 <p>If you don't want the default assignments to be registered, you can disable all of them with this configuration; if you chose to do this, you must explicitly register every binding.</p>
